--- a/public/style.css
+++ b/public/style.css
@@ -7,14 +7,30 @@ header {
   height: 3.5em;
 }
 
-
-p:hover {
-cursor: pointer;
-}
-
-
 .stickToBottom {
   width: '100%';
   position: 'fixed';
   bottom: 0;
 }
+
+
+.box {
+  transition: box-shadow .3s;
+  border-radius:10px;
+  border: 1px solid #ccc;
+  background: #fff;
+  float: left;
+  padding: 0.7em;
+  margin: .4em;
+}
+.box:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.2);
+  cursor: pointer;
+
+}
+
+/* .deleteComment {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
